--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body style="padding: 0 2% 0;">
     <br />
-    <a href=""><img class="logo" src="wlogo.webp" alt="logo Sparkle Coffee" /></a>
+    <a href=""><img class="logo" src="rlogo.webp" alt="logo Sparkle Coffee" /></a>
 
     <a href="https://www.instagram.com/sparklecoffee.bdg/" target="_blank">
       @sparklecoffee.bdg
@@ -35,20 +35,20 @@
       
       <!--Slider Foto-->
       <div id="demo" class="carousel slide" data-ride="carousel">
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <!--<a class="carousel-control-prev" href="#demo" data-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </a>
         <a class="carousel-control-next" href="#demo" data-slide="next">
           <span class="carousel-control-next-icon"></span>
-        </a>
-        <!--<ul class="carousel-indicators">
+        </a> -->
+        <ul class="carousel-indicators">
           <li data-target="#demo" data-slide-to="0" class="active"></li>
           <li data-target="#demo" data-slide-to="1"></li>
           <li data-target="#demo" data-slide-to="2"></li>
           <li data-target="#demo" data-slide-to="3"></li>
           <li data-target="#demo" data-slide-to="4"></li>
           <li data-target="#demo" data-slide-to="5"></li>
-        </ul> -->
+        </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img style="max-width: 550px; width: 100%; height: auto; border-radius: 12px;" src="img/1.webp" alt="" width="100%" height="auto">
@@ -132,6 +132,9 @@
     <h5 style="color: #ffffff;">✨ Sparkle Coffee - Bandung ✨</h5>
     
     <div id="links">
+      <a class="linktext" href="https://api.whatsapp.com/send?phone=6287812092795&text=Halo%20SparkleCoffee!!" target="_blank">
+        Whatsapp Admin
+      </a>
       <a class="linktext" href="https://drive.google.com/file/d/1P9845ZRDg8i_kEUDNL-fUu9vrrSUP5bC/view?usp=drivesdk" target="_blank">
         MENU BANDUNG
       </a>
@@ -159,18 +162,18 @@
     <br /><br />
     <p>Follow us on :</p>
     <div class="channels">
-      <!--<a class="channels_item" href="https://api.whatsapp.com/send?phone=6281122332060" target="_blank">
-        <img src="https://img.icons8.com/ios/40/whatsapp--v1.png" alt="Whatsapp Sparkle Coffee" />
-      </a>-->
+      <a class="channels_item" href="https://api.whatsapp.com/send?phone=6287812092795&text=Halo%20SparkleCoffee!!" target="_blank">
+        <img src="https://img.icons8.com/ios-filled/40/FFFFFF/whatsapp--v1.png" alt="Whatsapp Sparkle Coffee" />
+      </a>
       <a class="channels_item" href="#" target="_blank">
           <img src="https://img.icons8.com/ios-filled/40/FFFFFF/tiktok--v1.png" alt="Tiktok Sparkle Coffee" />
       </a>
-      <a class="channels_item" href="https://www.instagram.com/kopi.cantel/" target="_blank">
+      <a class="channels_item" href="https://www.instagram.com/sparklecoffee.bdg/" target="_blank">
           <img src="https://img.icons8.com/glyph-neue/40/FFFFFF/instagram-new--v1.png" alt="Instagram Sparkle Coffee" />
       </a>
-      <a class="channels_item" href="https://www.facebook.com/kopi.cantel/" target="_blank">
+      <!--<a class="channels_item" href="#" target="_blank">
           <img src="https://img.icons8.com/ios-filled/40/FFFFFF/facebook-new.png" alt="facebook Sparkle Coffee" />
-      </a>
+      </a>-->
       <!--<a class="channels_item" href="#" target="_blank">
         <img src="https://img.icons8.com/ios/40/twitter--v1.png" alt="twitter Sparkle Coffee" />
       </a>-->
@@ -186,7 +189,7 @@
     <br /><br />
 
     <!-- WA -->
-    <a href="https://api.whatsapp.com/send?phone=6282240023603&text=Halo%20Kopi%20Cantel!" class="float" target="_blank"><img src="https://img.icons8.com/pastel-glyph/50/FFFFFF/whatsapp--v2.png" alt="whatsapp--v1"/></a>
+    <a href="https://api.whatsapp.com/send?phone=6287812092795&text=Halo%20SparkleCoffee!!" class="float" target="_blank"><img src="https://img.icons8.com/pastel-glyph/50/FFFFFF/whatsapp--v2.png" alt="whatsapp--v1"/></a>
     <!-- WA -->
 
   </body>
