--- a/index.html
+++ b/index.html
@@ -135,17 +135,11 @@
       <a class="linktext" href="https://api.whatsapp.com/send?phone=6287812092795&text=Halo%20SparkleCoffee!!" target="_blank">
         Whatsapp Admin
       </a>
-      <a class="linktext" href="https://drive.google.com/file/d/1P9845ZRDg8i_kEUDNL-fUu9vrrSUP5bC/view?usp=drivesdk" target="_blank">
-        MENU BANDUNG
+      <a class="linktext" href="https://drive.google.com/file/d/1vkTqHKgroMS2IRoR0qomkAzIKJIWOCI6/view?usp=share_link" target="_blank">
+        Our Menu
       </a>
-      <a class="linktext" href="https://food.grab.com/id/en/restaurant/kopi-cantel-citarum-delivery/6-CY5ZV8MDAKA2ET" target="_blank">
-        GrabFood - Bandung
-      </a>
-      <a class="linktext" href="https://gofood.co.id/english/bandung/restaurant/samasama-food-collective-progo-3be1c580-14cd-46f5-be74-e03b97d04483" target="_blank">
-        Gofood - Bandung
-      </a>
-      <a class="linktext" href="https://shopee.co.id/universal-link/now-food/shop/20343310?deep_and_deferred=1&shareChannel=copy_link" target="_blank">
-        ShopeeFood - Bandung
+      <a class="linktext" href="https://www.google.com/maps/place/Sparkle+Coffee/@-6.9123524,107.6410463,17z/data=!4m8!3m7!1s0x2e68e7007e2c93d1:0x3b3993002edb2a93!8m2!3d-6.9123524!4d107.6436212!9m1!1b1!16s%2Fg%2F11vm3mqzj7?entry=ttu" target="_blank">
+        Give us your Review
       </a>
     </div>
     <div class="links">
