--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <h5 style="color: #ffffff;">✨ Sparkle Coffee - Bandung ✨</h5>
     
     <div id="links">
-      <a class="linktext" href="https://api.whatsapp.com/send?phone=6287812092795&text=Halo%20SparkleCoffee!!" target="_blank">
+      <a class="linktext" href="https://api.whatsapp.com/send?phone=6287812092795&text=Format%20Reguler%20Reservasi%20Sparkle%20Coffee%E2%9C%A8%0A%0ANama%20%3A%0ATanggal%20Reservasi%20%3A%0AJam%20%3A%20%0AJumlah%20Pax%20%3A%0A%0AUntuk%20reservasi%20lebih%20dari%2030%20menit%20tanpa%20konfirmasi%20di%20anggap%20cancel.%0AFind%20your%20Sparkle%E2%9C%A8.%0A" target="_blank">
         Whatsapp Admin
       </a>
       <a class="linktext" href="https://drive.google.com/file/d/1vkTqHKgroMS2IRoR0qomkAzIKJIWOCI6/view?usp=share_link" target="_blank">
